<resources>
    <string name="app_name">gcs_api</string>

    <string name="text_sure">OK</string>
    <string name="cancel">cancel</string>
    <string name="waring">Tips</string>

    <string name="mount">Mount</string>
    <string name="umount">Unmount</string>
    <string name="camera_control">Image and control </string>
    <string name="camera_mode">Switch Mode</string>
    <string name="camera_take_photo">Shoot</string>
    <string name="camera_record">Record</string>
    <string name="camera_settings">Camera parameters</string>
    <string name="camera_conn">Start to connect</string>
    <string name="stop">Stop</string>
    <string name="capacity">Battery capacity:</string>
    <string name="cycles">Cycle index:</string>
    <string name="electricity">State Of Charge:</string>
    <string name="temperature">Temperature:</string>
    <string name="temperature_tag">℃</string>
    <string name="percentage">%</string>
    <string name="capacity_unit">mAh</string>
    <string name="format_sd">Format SD Card</string>
    <string name="reset">Factory reset</string>
    <string name="pic_count">Photos can be taken</string>
    <string name="single_shot">Single shot</string>
    <string name="image_sharpness">Image Sharpness</string>
    <string name="osd">OSDswitch</string>
    <string name="af_mode">AFMode</string>
    <string name="metering_mode">Metering mode</string>
    <string name="contrast">Image Contrast</string>
    <string name="saturation">Image Saturation</string>
    <string name="brightness">Image brightness</string>
    <string name="white_balance">White balance</string>
    <string name="frequency_ratio">Video resolution</string>
    <string name="photo_quality">Photo quality</string>
    <string name="photo_size">Photo size</string>
    <string name="timing_shot">Time-lapse shooting</string>
    <string name="continuous_shot">Burst speed</string>
    <string name="record_shutter_speed">Camera shutter speed</string>
    <string name="shutter_speed">Camera shutter speed</string>
    <string name="ev">ev</string>
    <string name="aperture">Aperture size</string>
    <string name="iso">iso</string>
    <string name="camera_setting">Parameter settings</string>
    <string name="us">America</string>
    <string name="japan">Japan </string>
    <string name="control">Control</string>
    <string name="battery_info">Battery Info</string>
    <string name="read_data">Read the data</string>
    <string name="clear_data">Clear the data</string>
    <string name="send_data">Send the data</string>
    <string name="send_data_zone">Display field of data sending</string>
    <string name="disconn_device">Disconnect the device</string>
    <string name="port_management">Port Management</string>
    <string name="inquire"> Query</string>
    <string name="setting">Set</string>
    <string name="receive_data_display_area">Display field of data receiving</string>
    <string name="disconnected">No Connection</string>
    <string name="connect_devies">Connect the device</string>
    <string name="hide_camera">Hide status</string>
    <string name="white_balance_value">white balance value:</string>

    <!-- v1.2-->
    <string name="attitude">Get attitude information</string>
    <string name="gps_info">GPS information </string>
    <string name="device_dis_connect">device not connected</string>
    <string name="set_way_point">Set the waypoint</string>
    <string name="automatic_return">Automatic return</string>
    <string name="device_connected">Device is connected</string>
    <string name="position">Flight control and coordinate</string>
    <string name="excute_way_point">Waypoint flight start</string>
    <string name="satellites_num">Satellites number</string>
    <string name="sd_empty">SD card is empty</string>
    <string name="sd_full">SD card is full</string>
    <string name="sd_error">SD card error</string>

    <string name="point_content">lat：%1$f  lon：%2$f  z:%3$fm</string>
    <string name="attitude_pitch">Pitch angle：%1$f</string>
    <string name="attitude_roll">Roll angle：%1$f</string>
    <string name="attitude_yaw">Yaw angle：%1$f</string>
    <string name="attitude_vx">Velocity of X axial：%1$f m/s</string>
    <string name="attitude_vy">Velocity of Y axial：%1$f m/s</string>
    <string name="attitude_vz">Velocity of Z axial：%1$f m/s</string>
    <string name="attitude_alt">alt：%1$f m</string>
    <string name="attitude_relative_alt">relativeAlt：%1$f m</string>
    <string name="attitude_lat">lat：%1$f</string>
    <string name="attitude_lon">lon：%1$f</string>
    <string name="attitude_satellites">satellites number：%1$d </string>
    <string name="fly_yaw">Yaw angle</string>
    <string name="fly_roll">Roll angle</string>
    <string name="fly_pitch">Pitch angle</string>
    <string name="fly_lon">Longitude</string>
    <string name="fly_lat">Latitude</string>
    <string name="fly_relative_alt">Absolute height</string>
    <string name="fly_alt">Altitude</string>
    <string name="fly_vz">Velocity of Z axial</string>
    <string name="fly_vy">Velocity of Y axial</string>
    <string name="fly_vx">Velocity of X axial </string>
    <string name="auto_rtl">Automatic return</string>
    <string name="fly_point_set_sukccess">Send the waypoint successfully</string>
    <string name="plaese_arm">Please unlock</string>
    <string name="exe_way_point">Waypoint flight</string>
    <string name="back_last_mode">Return to the last mode</string>

    <string name="mode_not_exe">Not three modes of remote control </string>
    <string name="way_point_data_errro">Please set the waypoint</string>
    <string name="please_unlock">Please unlock the device</string>
    <string name="link_connected">The link is connected</string>
    <string name="content_not_non">Content cannot be empty</string>
    <string name="current_port_status">The current state of port</string>
    <string name="ip_content_not_non">Address should be filled</string>
    <!--v1.2-->


</resources>
