<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.powervision.powersdk.FounctionListActivity">

    <Button
        android:id="@+id/mount"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/mount" />

    <Button
        android:id="@+id/camera"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/camera_control" />

    <Button
        android:id="@+id/position"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/position" />

</LinearLayout>
