<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context="com.powervision.powersdk.MountActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="16dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <Button
                android:id="@+id/connect_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/connect_devies" />

            <TextView
                android:id="@+id/status_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:gravity="center"
                android:text="@string/disconnected"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="24sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_vertical">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/read_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/read_data" />

                <Button
                    android:id="@+id/clear_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/clear_data" />
            </LinearLayout>

            <TextView
                android:id="@+id/receive_content"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_marginLeft="8dp"
                android:background="@android:color/holo_purple"
                android:hint="@string/receive_data_display_area"
                android:padding="16dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <Button
                android:id="@+id/send_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/status_text"
                android:layout_centerHorizontal="true"
                android:text="@string/send_data" />

            <EditText
                android:id="@+id/send_content"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="8dp"
                android:background="@android:color/holo_purple"
                android:hint="@string/send_data_zone"
                android:padding="16dp" />

        </LinearLayout>

        <Button
            android:id="@+id/stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:background="@color/colorPrimary"
            android:text="@string/disconn_device"
            android:visibility="gone" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <Button
                    android:id="@+id/set_port_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/port_management" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:background="@android:color/darker_gray">

                    <Spinner
                        android:id="@+id/port_spinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:entries="@array/languages" />
                </LinearLayout>

            </LinearLayout>
        </FrameLayout>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray"
                android:padding="4dp">


                <include layout="@layout/view_uart" />

                <include layout="@layout/view_can" />

                <include layout="@layout/view_i2c" />

                <include layout="@layout/view_spi" />

                <include layout="@layout/view_gpio" />

                <include layout="@layout/view_can_filter" />


            </FrameLayout>
        </android.support.v4.widget.NestedScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/search_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="6dp"
                android:text="@string/inquire" />

            <Button
                android:id="@+id/set_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="6dp"
                android:text="@string/setting" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
